<resources>
    <string name="app_name">CasaVerde</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Administrador">Login Administrador</string>
    <string name="Sobre">Sobre nossa História</string>
    <string name="ProgramaFidelidade">Programa Fidelidade</string>
    <string name="fidelidade">Programa Fidelidade</string>
    <string name="Fidelidade">Programa Fidelidade</string>
    <string name="promocao">Programa de Promoções</string>
    <string name="promo">Promoções Especiais</string>
    <string name="Aprenda">Programa Aprenda</string>
    <string name="aprenda">Aprenda Conosco</string>
    <string name="casaverde">CasaVerde</string>
    <string name="icon_description">Icone Logo CasaVerde</string>
    <string name="compartilhar">Icone de compartilhar</string>
    <string name="menu">menu admin</string>
    <string name="inicio">inicio</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="Sobrenos">Sobre</string>
    <string name="Sobrealoja">Sobre</string>
    <string name="sobrealoja">sobre a loja</string>
    <string name="racao">Ração com 20%</string>
    <string name="kitracao">kit com 2 rações com 40% desc.</string>
    <string name="racaoleite">Ração leiteira com 50% desc.</string>
    <string name="kit_ra_o_golden">Kit Ração Golden</string>
    <string name="digite_o_novo_texto_da_promo_o">Digite o novo texto da promoção</string>
    <string name="voltar">Voltar</string>
    <string name="Voltar">Voltar</string>
    <string name="imagem_atual_da_promo_o">Imagem Atual da Promoção</string>
    <string name="alterar_foto_da_promo_o">Alterar Foto da Promoção</string>
    <string name="promotion_image_description">Foto Promoção</string>
    <string name="aprenda_image_description">Imagem de Aprenda</string>
    <string name="Promocoes">Promoções Imperdíveis</string>
    <string name="fidelidade_image_description">Fidelidade</string> <!-- Adicionada a nova string -->
    <string name="texto_sobre">Desde o início, a Casa Verde se destacou por sua variedade de produtos, desde sementes e fertilizantes até ferramentas e equipamentos agrícolas. A localização estratégica no bairro Santa Terezinha, um dos mais movimentados de Catalão, facilitou o acesso dos clientes e contribuiu para o rápido crescimento da loja. Em pouco tempo, a Casa Verde se consolidou como referência no mercado, conquistando a confiança e a fidelidade de seus clientes. A história da Casa Verde é um exemplo de como o trabalho duro, a paixão e o compromisso com a qualidade podem transformar um sonho em realidade. Em apenas alguns anos, a loja se tornou um ícone em Catalão, demonstrando que é possível conciliar o sucesso empresarial com o bem-estar da comunidade.</string>
    <string name="register_description">Programa de Fidelidade - Casa Verde\nBem-vindo ao Programa de Fidelidade da Casa Verde!\n\nAo se cadastrar, você passa a ter acesso a uma série de benefícios e descontos exclusivos em uma variedade de produtos. Nosso programa é simples e direto, garantindo que você aproveite ao máximo cada compra.\n\nComo funciona:\n\nCadastro: Preencha o formulário de cadastro com seus dados pessoais. É rápido e fácil!\n\nDescontos Exclusivos: A partir do momento em que seu cadastro é confirmado, você ganha descontos exclusivos em vários produtos.\n\nInforme seu CPF: No ato da compra, basta informar seu CPF para aproveitar os benefícios e descontos disponíveis.\n\nEconomia Garantida: Desfrute de preços reduzidos em produtos selecionados e aproveite as ofertas especiais reservadas apenas para nossos membros do Programa de Fidelidade.\n\nParticipe agora e descubra como é bom economizar enquanto cuida do seu jardim e de suas plantas com a qualidade dos produtos da Casa Verde.\n\nParabéns por fazer parte do nosso Programa de Fidelidade!</string>
    <string name="cadastrar">Cadastre-se</string>
    <string name="default_notification_channel_id">Cadastro realizado com sucesso!</string>
    <string name="cartaofidelidade">Cartão Fidelidade</string>
    <string name="login">Área do Administrador</string>
</resources>
