<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planofundo1"
    tools:context=".Home">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/icon_description"
                        android:src="@drawable/logotoolbar" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:text="@string/casaverde"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:contentDescription="@string/compartilhar"
                android:src="@drawable/baseline_share_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="52dp"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/baseline_admin_panel_settings_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/menu"
                android:src="@drawable/baseline_more_vert_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="594dp"
        android:background="@drawable/planofundobranco"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="334dp"
            android:layout_height="133dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/ProgramaFidelidade"
            android:src="@drawable/fideli"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="193dp"
            android:layout_height="29dp"
            android:layout_below="@id/image1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:text="@string/Fidelidade"
            android:textColor="@color/green200"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="272dp"
            android:layout_height="151dp"
            android:layout_below="@id/image1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="248dp"
            android:contentDescription="@string/promocao"
            android:src="@drawable/promo"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="212dp"
            android:text="@string/promo"
            android:textColor="@color/green200"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="270dp"
            android:layout_height="142dp"
            android:layout_below="@id/image2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/Aprenda"
            android:src="@drawable/aprenda"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:text="@string/aprenda"
            android:textColor="@color/green200"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:layout_width="410dp"
        android:layout_height="57dp"
        android:padding="5dp"
        android:background="@drawable/planofundobranco"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="80dp"
            android:text="Fale Conosco:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/zap"
            android:layout_width="35dp"
            android:layout_height="28dp"
            android:layout_marginLeft="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/_zap" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="215dp"
            android:text="+55 64 98435-3155"
            android:textSize="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.728"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/local"
            android:layout_width="42dp"
            android:layout_height="51dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/baseline_location_pin_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="360dp"
            android:layout_height="13dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:text="Av. Haide Evangelista de Rocha, nº 594, Setor Santa Terezinha, Catalão-GO"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
